Make single doxygen config file work for both sphinx docs generated by LLU and for doxygen docs generated by DoxyBuilder. Requires minor changes in the DoxyBuilder.

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -6,18 +6,24 @@ set(DOCUMENTATION_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
 set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxy)
 
 # Additional doxygen options
-set(DOXYGEN_GENERATE_HTML YES)
+set(DOXYGEN_GENERATE_HTML NO)
 set(DOXYGEN_GENERATE_XML YES)
 set(DOXYGEN_GENERATE_LATEX NO)
-set(CUSTOM_STYLE_DIR "@CUSTOM_STYLE_DIR@")
 
-
-# Go through LibraryLinkUtilities.doxyfile.in substituting custom values
-set(GENERATED_DOXYFILE "${DOXYGEN_OUTPUT_DIR}/LibraryLinkUtilities.doxyfile")
+# First we go through LibraryLinkUtilities.doxyfile.in substituting only @XXX@ tags which provide basic info like LLU version and description,
+# but this step still leaves ${XXX} tags in the doxyfile which can be substituted by different tool for custom styling. That is why we create an intermediate
+# doxyfile in this step.
+set(INTERMEDIATE_DOXYFILE "${DOXYGEN_OUTPUT_DIR}/LibraryLinkUtilities.doxyfile.intermediate")
 configure_file(
 		"${DOCUMENTATION_SOURCE}/LibraryLinkUtilities.doxyfile.in"
-		${GENERATED_DOXYFILE}
+		${INTERMEDIATE_DOXYFILE}
 		@ONLY)
+
+# In the next step we replace remaining ${XXXX} in the intermediate doxyfile.
+set(GENERATED_DOXYFILE "${DOXYGEN_OUTPUT_DIR}/LibraryLinkUtilities.doxyfile")
+configure_file(
+	"${DOXYGEN_OUTPUT_DIR}/LibraryLinkUtilities.doxyfile.intermediate"
+	${GENERATED_DOXYFILE})
 
 # Doxygen generation output
 set(DOXYGEN_OUTPUT_INDEX ${DOXYGEN_OUTPUT_DIR}/xml/index.xml)
