Start updating "how to use" chapter. Add comments to the CMakeLists in the Demo projects.

--- a/tests/Demo/CMakeLists.txt
+++ b/tests/Demo/CMakeLists.txt
@@ -4,7 +4,7 @@
 ######
 ################################################################################
 
-cmake_minimum_required(VERSION 3.12.0)
+cmake_minimum_required(VERSION 3.14.0)
 
 project(Demo
 		VERSION     0.0.1
@@ -50,7 +50,7 @@ set_target_properties(Demo PROPERTIES
 # here we use a utility function from cmake/Wolfram/Common.cmake which sets a basic set of compiler flags in a cross-platform way
 set_default_compile_options(Demo O2)
 
-# We need to link statically to runtime library on Windows because this is how LLU is built
+# We need to link statically to runtime library on Windows because this is how LLU is built, on other platforms this command is a no-op
 set_windows_static_runtime()
 
 # link to LLU
@@ -60,11 +60,15 @@ target_link_libraries(Demo PRIVATE LLU::LLU)
 #=========== INSTALL PACLET ==================
 #=============================================
 
+# run the install target to create a complete paclet directory structure, this will not create a .paclet file
+# LLU_LOCATION is required for this step because we need to copy LibraryLinkUtilities.wl file to the paclet files
 install_paclet_files(
 		TARGET Demo
 		LLU_LOCATION ${LLU_ROOT}
 )
 
+# Create a CMake target called "paclet" which will take the directory structure created by the "install" target and turn it into a proper .paclet file
+# It can optionally validate paclet contents, run a test file or install paclet to a directory where Mathematica can automatically find it.
 add_paclet_target(paclet
 		NAME Demo
 		VERIFY
