--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -18,7 +18,8 @@ import os
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
 # documentation root, use os.path.abspath to make it absolute, like shown here.
-#sys.path.insert(0, os.path.abspath('.'))
+
+sys.path.insert(0, '@SPHINX_CONF_DIR@/_extensions')
 
 # -- General configuration ------------------------------------------------
 
@@ -31,6 +32,7 @@ needs_sphinx = '2.3'
 extensions = [
     'breathe',
     'sphinx.ext.autosectionlabel',
+    'wolfram'
 ]
 
 autosectionlabel_prefix_document = True;
