--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -169,6 +169,8 @@ html_last_updated_fmt = '%b %d, %Y'
 # typographically correct entities.
 #html_use_smartypants = True
 
+html_add_permalinks = u" \U0001F517"
+
 # Custom sidebar templates, maps document names to template names.
 #html_sidebars = {}
 
