Document the Logger.

--- a/docs/LibraryLinkUtilities.doxyfile.in
+++ b/docs/LibraryLinkUtilities.doxyfile.in
@@ -298,7 +298,7 @@ EXPAND_ONLY_PREDEF     = NO
 SEARCH_INCLUDES        = YES
 INCLUDE_PATH           =
 INCLUDE_FILE_PATTERNS  =
-PREDEFINED             =
+PREDEFINED             = LLU_LOG_WARNING LLU_LOG_ERROR LLU_LOG_DEBUG
 EXPAND_AS_DEFINED      =
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
