--- a/docs/LibraryLinkUtilities.doxyfile.in
+++ b/docs/LibraryLinkUtilities.doxyfile.in
@@ -27,7 +27,7 @@ ABBREVIATE_BRIEF       = "The $name class" \
                          an \
                          the
 ALWAYS_DETAILED_SEC    = YES
-INLINE_INHERITED_MEMB  = NO
+INLINE_INHERITED_MEMB  = YES
 FULL_PATH_NAMES        = NO
 STRIP_FROM_PATH        =
 STRIP_FROM_INC_PATH    =
