Make test target work with arbitrary install location of LLU. Also make the tests fail when no LLU can be found (previously they would not run but also not fail).

--- a/tests/UnitTests/CMakeLists.txt
+++ b/tests/UnitTests/CMakeLists.txt
@@ -42,7 +42,12 @@ if(Mathematica_wolframscript_EXE)
 		set(MODULE_CODE
 			[===[
 				Needs["MUnit`"];
-				report = TestReport["${UnitTest}TestSuite.mt", MemoryConstraint -> Quantity[500, "MB"], TimeConstraint -> 30];
+				$LLUInstallDir = "${CMAKE_INSTALL_PREFIX}";
+				report = Catch[
+					TestReport["${UnitTest}TestSuite.mt", MemoryConstraint -> Quantity[500, "MB"], TimeConstraint -> 30],
+					_String,
+					Function[{value, tag}, Print["ERROR: " <> value]; Exit[1]]
+				];
 				report = report /. resObj_TestResultObject :> RuleCondition[TextString[resObj[{
 					"TestID",
 					"ExpectedOutput",
