--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -31,6 +31,7 @@ needs_sphinx = '2.3'
 # ones.
 extensions = [
     'breathe',
+    'sphinxcontrib.moderncmakedomain',
     'sphinx.ext.autosectionlabel',
     'wolfram'
 ]
