Instead of looking only for Mathematica installation look for any implementation of the Wolfram Language, such as Wolfram Desktop and Wolfram Engine. The preferred order is WD > Mathematica > WE.

--- a/cmake/LLUConfig.cmake.in
+++ b/cmake/LLUConfig.cmake.in
@@ -13,7 +13,7 @@ include(${LLU_CMAKE_DIR}/Wolfram/PacletUtilities.cmake)
 
 list(APPEND CMAKE_MODULE_PATH ${LLU_CMAKE_DIR})
 
-find_package(Mathematica 12.0 QUIET COMPONENTS WolframLibrary WSTP OPTIONAL_COMPONENTS wolframscript)
+find_package(WolframLanguage 12.0 QUIET COMPONENTS WolframLibrary WSTP OPTIONAL_COMPONENTS wolframscript)
 
 find_dependency(WolframLibrary 5)
 find_dependency(WSTP 4.25)
