Implement generic and strongly typed wrappers for MSparseArray together with documentation and unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if(APPLE AND NOT DEFINED ENV{MACOSX_DEPLOYMENT_TARGET})
 endif()
 
 project(LLU
-	VERSION 3.0.1
+	VERSION 3.1.0
 	DESCRIPTION "Modern C++ wrapper over LibraryLink and WSTP"
 	LANGUAGES CXX)
 
@@ -69,7 +69,8 @@ if(NOT TARGET LLU)
 		${LLU_SOURCE_DIR}/FileUtilities.cpp
 		${LLU_SOURCE_DIR}/TypedMArgument.cpp
 		${LLU_SOURCE_DIR}/Containers/DataStore.cpp
-		${LLU_SOURCE_DIR}/Containers/NumericArray.cpp)
+		${LLU_SOURCE_DIR}/Containers/NumericArray.cpp
+		${LLU_SOURCE_DIR}/Containers/SparseArray.cpp)
 
 	#add the main library
 	add_library(LLU ${LLU_SOURCE_FILES})
