--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -82,7 +82,7 @@ language = None
 
 # List of patterns, relative to source directory, that match files and
 # directories to ignore when looking for source files.
-exclude_patterns = ['_build', 'DoxygenMain.md']
+exclude_patterns = ['_build', 'DoxygenMain.md', 'tutorial']
 
 # The reST default role (used for this markup: `text`) to use for all
 # documents.
