--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@
 ###### Author: Rafal Chojna - rafalc@wolfram.com
 #################################################################################
 
-cmake_minimum_required(VERSION 3.12.0)
+cmake_minimum_required(VERSION 3.14.0)
 
 #set minimum MacOS target version if not defined as environment variable
 if(APPLE AND NOT DEFINED ENV{MACOSX_DEPLOYMENT_TARGET})
@@ -88,7 +88,7 @@ if(NOT TARGET LLU)
 		# Remove default warning level. It will be set later.
 		string(REGEX REPLACE "/W[0-4]" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
-		set_windows_static_runtime()
+		set_windows_static_runtime(LLU)
 
 		target_compile_options(LLU
 			PRIVATE "/W4"
