Rename $LinkToCRTStaticallyQ variable to $CRTLinkingMode as it is no longer a boolean property.

--- a/tests/UnitTests/CMakeLists.txt
+++ b/tests/UnitTests/CMakeLists.txt
@@ -59,7 +59,7 @@ foreach(UnitTest ${TEST_MODULES})
 		[===[
 			Needs["MUnit`"];
 			$LLUInstallDir = "${CMAKE_INSTALL_PREFIX}";
-			$LinkToCRTStaticallyQ = "${LLU_CRT_LINKING}";
+			$CRTLinkingMode = "${LLU_CRT_LINKING}";
 			report = Catch[
 				TestReport["${UnitTest}TestSuite.mt", MemoryConstraint -> Quantity[500, "MB"], TimeConstraint -> 30],
 				_String,
